--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     ]
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
